// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue:stories for libraries should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import testUiLib from './test-ui-lib.vue';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof testUiLib> = {
  component: testUiLib,
  title: 'testUiLib',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    await expect(canvas.getByText(/Welcome to testUiLib!/gi)).toBeTruthy();
  },
};
"
`;

exports[`vue:stories for libraries should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import anotherCmp from './another-cmp.vue';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof anotherCmp> = {
  component: anotherCmp,
  title: 'anotherCmp',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
};

export const Heading: Story = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    await expect(canvas.getByText(/Welcome to anotherCmp!/gi)).toBeTruthy();
  },
};
"
`;

exports[`vue:stories for libraries should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import testUiLib from './test-ui-lib.vue';

const meta: Meta<typeof testUiLib> = {
  component: testUiLib,
  title: 'testUiLib',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
};
"
`;

exports[`vue:stories for libraries should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import anotherCmp from './another-cmp.vue';

const meta: Meta<typeof anotherCmp> = {
  component: anotherCmp,
  title: 'anotherCmp',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
};
"
`;
